--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "build": "gulp build",
     "watch": "gulp watch"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^4.16.6"
+  },
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
